<resources>
    <string name="app_name">Mi Marranito</string>
    <string name="btn_configuracion">Configuración</string>
    <string name="btn_resumen">Resumen</string>
    <string name="btn_historial">Historial</string>
    <string name="btn_aboutus">Recomendaciones</string>
    <string name="salir">Salir</string>
    <string name="regresar">Back</string>
    <string name="edt_cantidad">$ 0.00</string>
    <string name="edt_agregar">Etiqueta</string>
    <string name="mi_texto">Recomendaciones</string>
    <string name="tip1"><u>#Tip 1</u></string>
    <string name="tip2"><u>#Tip 2</u></string>
    <string name="tip3"><u>#Tip 3</u></string>
    <string name="tip4"><u>Más info</u></string>
    <string name="recomendaciones">Recomendaciones</string>
    <string name="tip1_1">#Tip 1</string>
    <string name="tip2_2">#Tip 2</string>
    <string name="tip3_3">#Tip 3</string>
    <string name="tip4_4">Más info</string>
    <string name="layout2_rec">Registrar tus gastos contribuirá a ser  más conciente de tus egresos.</string>
    <string name="layout4_rec">Que tus gastos no excedan la cantidad de tus ingresos.</string>
    <string name="layout6_rec">Establezca prioridades financieras. Priorizar metas contribuye a una mejor distribuicion.</string>
    <string name="layout8_rec">Establezca prioridades financieras. Priorizar metas contribuye a una mejor distribuicion.</string>
    <string name="txtVConf1">¿Con que frecuencia obtienes ingresos?</string>
    <string name="txtVConf2">¿Cual es el periodo?</string>
    <string name="txtVConf3">Monto</string>

</resources>