<?xml version="1.0" encoding="utf-8"?>
 <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AcercaDeActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/cuadrado_corners"
        android:clickable="true"
        android:elevation="20dp"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/item_name3"
            android:layout_width="200dp"
            android:layout_height="160dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/t_3"
            android:foregroundGravity="center_vertical"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/item_name3"
            android:background="@color/white">

            <TextView
                android:id="@+id/item_textName3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/mi_texto"
                android:textColor="#1976D2"
                android:textSize="30dp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/cuadrado_corners"
        android:clickable="true"
        android:elevation="20dp"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2"
        app:layout_constraintVertical_bias="0.16">

        <ImageView
            android:id="@+id/item_name33"
            android:layout_width="200dp"
            android:layout_height="160dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/t_2"
            android:foregroundGravity="center_vertical"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/item_name33"
            android:background="@color/white">

            <TextView
                android:id="@+id/item_txtTip2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:clickable="true"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/tip2"
                android:textColor="#1976D2"
                android:textSize="30dp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="300dp"
        android:layout_height="200dp"

        android:layout_marginTop="20dp"
        android:background="@drawable/cuadrado_corners"
        android:clickable="true"
        android:elevation="20dp"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout1"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/item_name2"
            android:layout_width="200dp"
            android:layout_height="160dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/t_1"
            android:foregroundGravity="center_vertical"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/item_name2"
            android:background="@color/white">

            <TextView
                android:id="@+id/item_txtTip1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:maxLines="1"
                android:singleLine="true"
                android:text="@string/tip1"
                android:textColor="#1976D2"
                android:textSize="30dp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

